And inital Vue files

--- a/src/hbs-app/layouts/base.hbs
+++ b/src/hbs-app/layouts/base.hbs
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./css/bundle.components.css">
     <link rel="stylesheet" href="./css/bundle.globalStyles.css">
     <link rel="stylesheet" href="./css/bundle.cmsComponents.css">
+    <link rel="stylesheet" href="./css/bundle.vueApp.css">
+    
     <link rel="canonical" href="https://www.qa3.tiffany.com/engagement/shop/engagement-rings/yellow-gold/">
 
      <!-- <link rel="stylesheet" href="./css/components.css">
@@ -52,6 +54,7 @@
     <script src="//media.richrelevance.com/rrserver/js/1.2/p13n.js"></script>
     <script src="./js/bundle.vendor.js"></script>
     <script src="./js/bundle.components.js"></script>
+    <script src="./js/bundle.vueApp.js"></script>
     <script src="./js/bundle.reactApp.js"></script>
 
 </body>
