--- a/src/hbs-app/pages/landing-page.hbs
+++ b/src/hbs-app/pages/landing-page.hbs
@@ -10,6 +10,8 @@ sortOrder: 0
     {{> error-banner}}
     {{> sticky-nav sticky-nav}}
 
+    <div id="app"></div>
+
     <div class="hero-banner container with-splash-image" data-aos="fade-up" >
         {{#if byo-landing-page.heroBanner.isForeGroundImage}}
             <div class="foreground-image {{#if byo-landing-page.heroBanner.isTransperantForeground}}blend-mode{{/if}}" data-pos-left="{{byo-landing-page.heroBanner.foreGroundImgDesktopLeftPos}}" data-pos-top="{{byo-landing-page.heroBanner.foreGroundImgDesktopTopPos}}" data-mobile-pos-left="{{byo-landing-page.heroBanner.foreGroundImgMobileLeftPos}}" data-mobile-pos-top="{{byo-landing-page.heroBanner.foreGroundImgMobileTopPos}}">
