--- a/src/hbs-app/layouts/pdp.hbs
+++ b/src/hbs-app/layouts/pdp.hbs
@@ -20,7 +20,7 @@
      <link rel="stylesheet" href="./css/react-components.css">  -->
 </head>
 
-<body data-comp-prefix="app-js__" class="tiffany-aem visual-spacing">
+<body data-comp-prefix="app-js__" class="visual-spacing">
     <a href="#main" class="hide-from__screen skipToMain">Skip to main content</a>
     <div class="page-wrap">
         {{> header }}
