--- a/src/hbs-app/pages/pdp.hbs
+++ b/src/hbs-app/pages/pdp.hbs
@@ -1,8 +1,8 @@
 ---
-title: Diamond Jewelers | Jewelry Stores | Fine Jewelry | Tiffany Co.
+title: PDP
 type: page
 layout: pdp
-description: Tiffany Co. jewelry stores offer a large selection of high quality jewelry. Everything from certified diamonds and engagement rings to fashion and men&#39;s jewelry. Shop online or in-store.
+description: Genereal vue framework
 sortOrder: 0
 ---
 <script language="javascript" type="text/javascript"  src="//s7d9.scene7.com/s7viewers/html5/js/FlyoutViewer.js"></script>
@@ -12,7 +12,7 @@ sortOrder: 0
         <div class="pdp-details">
             <h1>Product name</h1>
             <strong>Product description </strong>
-            <p>As experts in all matters of the heart, Tiffany is at your service from start to finish. We’re pleased to assist you every step of the way, beginning with the perfect engagement ring.</p>
+            <p>As experts in all matters of the heart, ___ is at your service from start to finish. We’re pleased to assist you every step of the way, beginning with the perfect engagement ring.</p>
             <br/>
             <strong>Specifications</strong>
             <ul>
